crates/parser/tests/snapshots/parse@call.nio.snap
---
source: crates/parser/tests/parser.rs
assertion_line: 11
expression: "&result"
input_file: crates/parser/tests/inputs/call.nio

---
Ok(
    Program {
        statements: [
            Expr(
                BinOp {
                    op: Add,
                    lhs: Ident(
                        "a",
                    ),
                    rhs: Call {
                        callee: Ident(
                            "b",
                        ),
                        args: [
                            Ident(
                                "x",
                            ),
                            Ident(
                                "y",
                            ),
                        ],
                    },
                },
            ),
        ],
    },
)
