crates/parser/tests/snapshots/parse@empty.nio.snap
---
source: crates/parser/tests/parser.rs
assertion_line: 11
expression: "&result"
input_file: crates/parser/tests/inputs/empty.nio

---
Ok(
    Program {
        statements: [],
    },
)
