crates/parser/tests/snapshots/parse@expr.nio.snap
---
source: crates/parser/tests/parser.rs
assertion_line: 11
expression: "&result"
input_file: crates/parser/tests/inputs/expr.nio

---
Ok(
    Program {
        statements: [
            Expr(
                BinOp {
                    op: Add,
                    lhs: IntLit(
                        "1",
                    ),
                    rhs: BinOp {
                        op: Mul,
                        lhs: BinOp {
                            op: Mul,
                            lhs: IntLit(
                                "2",
                            ),
                            rhs: IntLit(
                                "3",
                            ),
                        },
                        rhs: IntLit(
                            "4",
                        ),
                    },
                },
            ),
        ],
    },
)
