crates/parser/tests/snapshots/parse@lambda.nio.snap
---
source: crates/parser/tests/parser.rs
assertion_line: 11
expression: "&result"
input_file: crates/parser/tests/inputs/lambda.nio

---
Ok(
    Program {
        statements: [
            Expr(
                Lambda {
                    params: [
                        "x",
                    ],
                    body: BinOp {
                        op: Add,
                        lhs: Ident(
                            "x",
                        ),
                        rhs: IntLit(
                            "1",
                        ),
                    },
                },
            ),
        ],
    },
)
